[package]
name = "ds"
version = "0.1.0"
authors = ["cfzjywxk <lsswxrxr@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false