[package]
name = "ds"
version = "0.1.0"
authors = ["cfzjywxk <lsswxrxr@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_fixed_queue"
harness = false
